; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/events/intel/extr_uncore_snbep.c_snbep_cbox_put_constraint.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/events/intel/extr_uncore_snbep.c_snbep_cbox_put_constraint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_uncore_box = type { %struct.intel_uncore_extra_reg* }
%struct.intel_uncore_extra_reg = type { i32 }
%struct.perf_event = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.hw_perf_event_extra }
%struct.hw_perf_event_extra = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_uncore_box*, %struct.perf_event*)* @snbep_cbox_put_constraint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snbep_cbox_put_constraint(%struct.intel_uncore_box* %0, %struct.perf_event* %1) #0 {
  %3 = alloca %struct.intel_uncore_box*, align 8
  %4 = alloca %struct.perf_event*, align 8
  %5 = alloca %struct.hw_perf_event_extra*, align 8
  %6 = alloca %struct.intel_uncore_extra_reg*, align 8
  %7 = alloca i32, align 4
  store %struct.intel_uncore_box* %0, %struct.intel_uncore_box** %3, align 8
  store %struct.perf_event* %1, %struct.perf_event** %4, align 8
  %8 = load %struct.perf_event*, %struct.perf_event** %4, align 8
  %9 = getelementptr inbounds %struct.perf_event, %struct.perf_event* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store %struct.hw_perf_event_extra* %10, %struct.hw_perf_event_extra** %5, align 8
  %11 = load %struct.intel_uncore_box*, %struct.intel_uncore_box** %3, align 8
  %12 = getelementptr inbounds %struct.intel_uncore_box, %struct.intel_uncore_box* %11, i32 0, i32 0
  %13 = load %struct.intel_uncore_extra_reg*, %struct.intel_uncore_extra_reg** %12, align 8
  %14 = getelementptr inbounds %struct.intel_uncore_extra_reg, %struct.intel_uncore_extra_reg* %13, i64 0
  store %struct.intel_uncore_extra_reg* %14, %struct.intel_uncore_extra_reg** %6, align 8
  %15 = load %struct.intel_uncore_box*, %struct.intel_uncore_box** %3, align 8
  %16 = call i64 @uncore_box_is_fake(%struct.intel_uncore_box* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  br label %45

19:                                               ; preds = %2
  store i32 0, i32* %7, align 4
  br label %20

20:                                               ; preds = %39, %19
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 5
  br i1 %22, label %23, label %42

23:                                               ; preds = %20
  %24 = load %struct.hw_perf_event_extra*, %struct.hw_perf_event_extra** %5, align 8
  %25 = getelementptr inbounds %struct.hw_perf_event_extra, %struct.hw_perf_event_extra* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* %7, align 4
  %28 = shl i32 1, %27
  %29 = and i32 %26, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %38

31:                                               ; preds = %23
  %32 = load i32, i32* %7, align 4
  %33 = mul nsw i32 %32, 6
  %34 = shl i32 1, %33
  %35 = load %struct.intel_uncore_extra_reg*, %struct.intel_uncore_extra_reg** %6, align 8
  %36 = getelementptr inbounds %struct.intel_uncore_extra_reg, %struct.intel_uncore_extra_reg* %35, i32 0, i32 0
  %37 = call i32 @atomic_sub(i32 %34, i32* %36)
  br label %38

38:                                               ; preds = %31, %23
  br label %39

39:                                               ; preds = %38
  %40 = load i32, i32* %7, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %7, align 4
  br label %20

42:                                               ; preds = %20
  %43 = load %struct.hw_perf_event_extra*, %struct.hw_perf_event_extra** %5, align 8
  %44 = getelementptr inbounds %struct.hw_perf_event_extra, %struct.hw_perf_event_extra* %43, i32 0, i32 0
  store i32 0, i32* %44, align 4
  br label %45

45:                                               ; preds = %42, %18
  ret void
}

declare dso_local i64 @uncore_box_is_fake(%struct.intel_uncore_box*) #1

declare dso_local i32 @atomic_sub(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
